--- a/style.css
+++ b/style.css
@@ -1,5 +1,205 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+0,ffffff+82,edf8ff+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top,  #ffffff 0%, #ffffff 82%, #edf8ff 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #ffffff 0%,#ffffff 82%,#edf8ff 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #ffffff 0%,#ffffff 82%,#edf8ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edf8ff',GradientType=0 ); /* IE6-9 */
+
+}
+
+h1.title {
+	text-align: center;
+    padding: 0 0 16px;
+    font-size: 36px;
+    font-weight: 700;
+    color: #19ce60;
+    text-shadow: 2px 2px rgba(0, 0, 0, .1);
+}
 #search {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    margin: 0 auto 64px;
+    width: 100%;
+    max-width: 530px;
+    border: 2px solid #19ce60;
+}
+#search_query {
+    width: auto;
+    flex: 1;
+    height: 24px;
+    padding: 13px 15px;
+    margin: 1px;
+    background-color: #fff;
+    font-size: 18px;
+    line-height: 24px;
+    color: #000;
+    font-weight: 700;
+    outline: 0;
+    border: 0;
+}
+#search button[type="submit"] {
+	background-image: url(search-white-18dp.svg);
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 56px;
+    height: 56px;
+    background-color: #19ce60;
+    border: 0;
+    margin: 0;
+    cursor: pointer;
+    position: relative;
+}
+
+.touch_this {
+    opacity: 0;
+    background: rgba(0, 0, 0, 0.2);
+    position: absolute;
+    width: 124px;
+    height: 124px;
+    left: -33px;
+    top: -33px;
+            border-radius: 50%;
+	   -moz-border-radius: 50%;
+	 -khtml-border-radius: 50%;
+	-webkit-border-radius: 50%;
+}
+#search.go .touch_this {
+    animation-delay: .3s;
+	animation-duration: 1s;
+    animation-name: ripple;
+    animation-iteration-count: infinite;
+}
+.touch_do_this {
+    opacity: 0;
+	color: #555;
+    position: absolute;
+    left: -20px;
+    bottom: -52px;
+    width: 100px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+}
+#search.go .touch_do_this {
+    animation-delay: .3s;
+	animation-duration: 1s;
+    animation-name: fadeup;
+    animation-fill-mode: forwards;
+}
+@media only screen and (max-width:620px) {
+	body{
+		padding: 0 32px;
+		overflow: hidden;
+	}
+    h1.title {
+    	font-size: 26px;
+    }
+    #search {
+                border-radius: 4px;
+           -moz-border-radius: 4px;
+         -khtml-border-radius: 4px;
+        -webkit-border-radius: 4px;
+        border: 1px solid #19ce60;
+                box-sizing: border-box;
+	       -moz-box-sizing: border-box;
+	    -webkit-box-sizing: border-box;
+    }
+    #search_query {
+    	min-width: 0;
+        height: 24px;
+        padding: 13px 15px;
+        margin: 1px;
+        background-color: #fff;
+        font-size: 18px;
+        line-height: 24px;
+        color: #000;
+        font-weight: 700;
+        outline: 0;
+        border: 0;
+    }
+    #search button[type="submit"] {
+        background-image: url(search-white-18dp.svg);
+        background-size: 50%;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 56px;
+        height: 56px;
+        background-color: #19ce60;
+        border: 0;
+        margin: 0;
+        cursor: pointer;
+        position: relative;
+    }
+    
+    .touch_this {
+        opacity: 0;
+        background: rgba(0, 0, 0, 0.2);
+        position: absolute;
+        width: 124px;
+        height: 124px;
+        left: -33px;
+        top: -33px;
+                border-radius: 50%;
+           -moz-border-radius: 50%;
+         -khtml-border-radius: 50%;
+        -webkit-border-radius: 50%;
+    }
+    #search.go .touch_this {
+        animation-delay: .3s;
+        animation-duration: 1s;
+        animation-name: ripple;
+        animation-iteration-count: infinite;
+    }
+    .touch_do_this {
+        opacity: 0;
+        color: #555;
+        position: absolute;
+        left: -20px;
+        bottom: -52px;
+        width: 100px;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 500;
+    }
+    #search.go .touch_do_this {
+        animation-delay: .3s;
+        animation-duration: 1s;
+        animation-name: fadeup;
+        animation-fill-mode: forwards;
+    }
+}
+@keyframes fadeup {
+    from {
+        bottom: -80px;
+        opacity: 0;
+    }
+    to {
+        bottom: -52px;
+        opacity: 1;
+    }
+}
+@keyframes ripple {
+    from {
+        width: 0;
+        height: 0;
+        left: 29px;
+        top: 29px;
+        opacity: 1;
+    }
+    to {
+        width: 124px;
+        height: 124px;
+        left: -33px;
+        top: -33px;
+        opacity: 0;
+    }
 }
