animation 시작 전 터치영역 수정

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1.title {
 }
 
 .touch_this {
-    opacity: 0;
+    display: none;
     background: rgba(0, 0, 0, 0.2);
     position: absolute;
     width: 124px;
@@ -85,13 +85,15 @@ h1.title {
 	-webkit-border-radius: 50%;
 }
 #search.go .touch_this {
+    opacity: 0;
+    display: block;
     animation-delay: .3s;
 	animation-duration: 1s;
     animation-name: ripple;
     animation-iteration-count: infinite;
 }
 .touch_do_this {
-    opacity: 0;
+    display: none;
 	color: #555;
     position: absolute;
     left: -20px;
@@ -102,6 +104,9 @@ h1.title {
     font-weight: 500;
 }
 #search.go .touch_do_this {
+    bottom: -80px;
+    opacity: 0;
+    display: block;
     animation-delay: .3s;
 	animation-duration: 1s;
     animation-name: fadeup;
