--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1.title {
     -ms-flex: 1;
     flex: 1; 
     height: 24px;
-    padding: 13px 15px;
+    padding: 15px;
     margin: 1px;
     background-color: #fff;
     font-size: 18px;
@@ -69,6 +69,9 @@ h1.title {
     margin: 0;
     cursor: pointer;
     position: relative;
+}
+.generate #search button[type="submit"] {
+	background-image: url(check-white-18dp.svg);
 }
 
 .touch_this {
@@ -111,6 +114,72 @@ h1.title {
 	animation-duration: 1s;
     animation-name: fadeup;
     animation-fill-mode: forwards;
+}
+.generate_container {
+    text-align: center;
+    display: none;
+}
+.generate .generate_container {
+    display: block;
+}
+.engine_selector {
+	padding-left: 36px;
+}
+.engine_selector label {
+	font-size: 14px;
+	margin-right: 8px;
+}
+.generate_container .url {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: inline-flex;
+}
+.generate_container .copy {
+    background-color: rgba(255, 255, 255, 0);
+    background-image: url(content_copy-black-18dp.svg);
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 32px;
+    height: 32px;
+    margin: 4px 4px 0 0;
+    display: inline-block;
+    border: none;
+}
+.generate_container #generated_url {
+	background: rgba(232, 255, 0, 0.1);
+	padding: 13px 12px;
+	border: none;
+			border-radius: 4px;
+	   -moz-border-radius: 4px;
+	 -khtml-border-radius: 4px;
+	-webkit-border-radius: 4px;
+}
+.generate_container h1 {
+	font-size: 16px;
+	font-weight: 700;
+	margin: 20px 0 12px;
+}
+.generate_container p {
+	font-size: 12px;
+	font-weight: 500;
+	margin: 4px 0;
+}
+.footer {
+	color: rgba(0, 0, 0, .3);
+	text-align: center;
+	font-size: 14px;
+	font-weight: 500;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 64px;
+}
+.footer a {
+	color: rgba(0, 0, 0, .6);
+	text-decoration: none;
 }
 @media only screen and (max-width:620px) {
 	body{
