생성 화면에서 입력창 하단 여백 수정

--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ h1.title {
     cursor: pointer;
     position: relative;
 }
+.generate #search {
+    margin-bottom: 20px;
+}
 .generate #search button[type="submit"] {
 	background-image: url(check-white-18dp.svg);
 }
