--- a/style.css
+++ b/style.css
@@ -60,6 +60,15 @@ h1.title {
     font-weight: 700;
     outline: 0;
     border: 0;
+    white-space: pre;
+    overflow: hidden;
+}
+#search_query #query_cursor {
+    display: inline-block;
+    min-width: 2px;
+    min-height: 1em;
+    background: #000;
+    color: #fff;
 }
 #search button[type="submit"] {
 	background-image: url(search-white-18dp.svg);
