--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
     overflow: hidden;
 }
 body, input, label, h1, a, p, span {
-    font-family: 나눔고딕, NanumGothic, "맑은 고딕", "MalgunGhotic", sans-serif;
+    font-family: 'Noto Sans KR', 나눔고딕, NanumGothic, "맑은 고딕", "MalgunGhotic", sans-serif;
 }
 body {
     display: -webkit-box;
@@ -30,7 +30,7 @@ h1.title {
     font-size: 36px;
     font-weight: 700;
     color: #19ce60;
-    text-shadow: 2px 2px rgba(0, 0, 0, .1);
+    text-shadow: 1px 2px rgba(0, 0, 0, .1);
 }
 #search {
     display: -webkit-box;
